--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ h1 {
 
 span {
     color: gold;
-    padding: 20px 30PX 20PX 30PX;
+    padding: 22px;
     border-radius: 1rem;
     font-weight: 900;
 }
