--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ h1 {
 
 span {
     color: gold;
-    padding: 22px;
+    padding: 20px 30PX 20PX 30PX;
     border-radius: 1rem;
     font-weight: 900;
 }
@@ -130,6 +130,12 @@ span:hover {
         color: gold;
         letter-spacing: 0.2rem;
         margin-top: 2rem;
+    }
+
+    span {
+
+        padding: 10px;
+
     }
 
 
